# kb-agent

./: .env.example  .gitattributes  .gitignore  .temp_instructions.json  AGENTS.md  README.md  conftest.py  extract_bge_model.sh  pyproject.toml  test.txt  test_config_refresh.py  test_message.py  test_message_out.txt  test_mouse.py  test_planner_fix.py  test_textual_app.py  verify_skill.py
docs/: agent-mode-architecture.md  agentic-rag-architecture.md  features.md  index_pipeline_review.md  rag-advanced-search-query-architecture.md  rag-plan-node-bugs-investigation.md  rag_exploration.md  web_baike_baidu_com_d64ccda1e8-summary.md  web_baike_baidu_com_d64ccda1e8.md  web_github_com_dc068121c1.md  web_github_com_e6100f46d0-summary.md  web_github_com_e6100f46d0.md  web_test-summary.md  web_test.md  web_www_bilibili_com_e0ed1515e1-summary.md  web_www_bilibili_com_e0ed1515e1.md
openspec/: config.yaml
scripts/: clean_index.bat  clean_index.sh  compress_bge_model.sh  extract_bge_model.bat  extract_bge_model.sh  extract_gemma4_model.sh  llama-cli.sh  llm_server.bat  llm_server.sh
src/kb_agent/: __init__.py  audit.py  chunking.py  cli.py  config.py  engine.py  gaip_proxy.py  llm.py  llm_router.py  processor.py  security.py  skill_cli.py  tui.py
src/kb_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_docs/: TEST-123.md
test_docs/.chroma/: chroma.sqlite3
tests/: test_agent_graph.py  test_agent_sandbox.py  test_agent_session.py  test_agent_skills.py  test_chunking.py  test_config.py  test_config_llm_router.py  test_connectors_new.py  test_engine_mock.py  test_llm_sanitization.py  test_local_file.py  test_local_file_qa.py  test_processor.py  test_processor_mock.py  test_reflect_node.py  test_security.py  test_tui.py  test_vector_tool.py  test_web_connector.py
tests/agent/: test_agent_mode_e2e.py  test_analyze_and_route.py  test_decompose_query.py  test_e2e_plan_node.py  test_grade_evidence.py  test_hybrid_search.py  test_jira_tool.py  test_onnx_embedding.py  test_plan_layer.py  test_tool_dedup.py
tests/connectors/: test_cache.py  test_jira_create.py
tests/skill/: test_approval_gate.py  test_code_exec.py  (+9 more)
(+301 files in other folders)
